# policyc

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
eval/: preregistration-held-out-v2.md  preregistration-held-out-v3.md
eval/audits/: compiler-v0.6-development-smoke.md  held-out-v1-findings.md  (+10 more)
evals/: core.jsonl  expanded.jsonl  files.jsonl  gmail-calendar.jsonl  images.jsonl  model-smoke.jsonl  web.jsonl  writing.jsonl
paper/: policyc.tex  project-entry.md
policies/: core.yaml  files.yaml  gmail-calendar.yaml  images.yaml  web.yaml  writing.yaml
pricing/: openai-v1.json  openai-v2.json
prompts/: synthetic-enterprise-agent.md
protocol/: behavioral-case.schema.json  compiled-policy-artifact.schema.json  paired-run-manifest.schema.json  run-event.schema.json  run-manifest.schema.json  trial-result.schema.json
runtime/python/: pyproject.toml
runtime/python/policyc_runtime/: __init__.py  adjudication.py  blind_grading.py  budget.py  case_evaluator.py  catalog.py  cli.py  evaluator.py  events.py  experiment_models.py  hashing.py  manifest.py  models.py  paired_manifest.py  paired_report.py  paired_runtime.py  persistence.py  pricing.py  rate_limit.py  regrade.py  report.py  scheduler.py  service.py  state.py
runtime/python/policyc_runtime/providers/: __init__.py  base.py  fake.py  openai.py
runtime/python/tests/: conftest.py  test_adjudication.py  test_catalog.py  test_manifest.py  test_openai_contract.py  test_paid_safety.py  test_runtime.py  test_service.py
src/: cli.ts
test/: compiler.test.ts  experiment.test.ts
(+54 files in other folders)
